--- a/templates/etc/systemd/system/ioc.service
+++ b/templates/etc/systemd/system/ioc.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=EPICS Soft IOC <%= @name %>
+Requires=network.target
+After=network.target
 
 [Service]
 EnvironmentFile=-/etc/iocs/<%= @name -%>/config
