--- a/templates/etc/systemd/system/ioc.service
+++ b/templates/etc/systemd/system/ioc.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=EPICS Soft IOC <%= @name %>
 Requires=network.target
-After=network.target
+After=network.target remote-fs.target
 
 [Service]
 <% @real_env_vars.each_pair do |key, val| -%>
