Add support for externally managed users
This is useful if IOC users are managed by other means (like LDAP
or Active Directory). This also allows multiple IOC processes to
share the same user name.

--- a/templates/etc/systemd/system/ioc.service
+++ b/templates/etc/systemd/system/ioc.service
@@ -10,7 +10,7 @@ Environment="<%= key %>=<%= val %>"
 EnvironmentFile=-/etc/iocs/<%= @name -%>/config
 ExecStart=/usr/bin/procServ --foreground --quiet --chdir=<%= @absbootdir -%> --ignore=^C^D^] --coresize=<%= @coresize -%> --restrict --logfile=<%= @procServ_logfile -%> --name <%= @name -%> <%= @consolePort -%> <%= @absstartscript %>
 Restart=always
-User=<%= @user %>
+User=<%= @username %>
 
 [Install]
 WantedBy=multi-user.target
