Ensure template values are actually inserted
The values of Requires, After, and RequiresMountsFor were always
empty.

--- a/templates/etc/systemd/system/ioc.service
+++ b/templates/etc/systemd/system/ioc.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=EPICS Soft IOC <%= @name %>
-Requires=<% @systemd_requires.join(' ') %>
-After=<% @systemd_after.join(' ') %>
-RequiresMountsFor=<% @systemd_requires_mounts_for.join(' ') %>
+Requires=<%= @systemd_requires.join(' ') %>
+After=<%= @systemd_after.join(' ') %>
+RequiresMountsFor=<%= @systemd_requires_mounts_for.join(' ') %>
 
 [Service]
 <% @real_env_vars.each_pair do |key, val| -%>
