Rename variables to improve consistency

--- a/templates/etc/systemd/system/ioc.service
+++ b/templates/etc/systemd/system/ioc.service
@@ -9,7 +9,7 @@ RequiresMountsFor=<%= @systemd_requires_mounts_for.join(' ') %>
 Environment="<%= key %>=<%= val %>"
 <% end -%>
 EnvironmentFile=-/etc/iocs/<%= @name -%>/config
-ExecStart=/usr/bin/procServ --foreground --quiet --chdir=<%= @absbootdir -%> --ignore=^C^D^] --coresize=<%= @coresize -%> --restrict --logfile=<%= @procServ_logfile -%> --name <%= @name -%> <%= @consolePort -%> <%= @absstartscript %>
+ExecStart=/usr/bin/procServ --foreground --quiet --chdir=<%= @absbootdir -%> --ignore=^C^D^] --coresize=<%= @coresize -%> --restrict --logfile=<%= @procserv_log_file -%> --name <%= @name -%> <%= @console_port -%> <%= @absstartscript %>
 Restart=always
 User=<%= @username %>
 
