--- a/templates/etc/systemd/system/ioc.service
+++ b/templates/etc/systemd/system/ioc.service
@@ -9,9 +9,12 @@ RequiresMountsFor=<%= @systemd_requires_mounts_for.join(' ') %>
 Environment="<%= key %>=<%= val %>"
 <% end -%>
 EnvironmentFile=-/etc/iocs/<%= @name -%>/config
-ExecStart=/usr/bin/procServ --foreground --quiet --chdir=<%= @absbootdir -%> --ignore=^C^D^] --coresize=<%= @coresize -%> --restrict --logfile=<%= @procserv_log_file -%> --name <%= @name -%><% if @enable_console_port %> --port <%= @console_port -%><% end %><% if @enable_unix_domain_socket %> --port <%= @unix_domain_socket -%><% end %> <%= @absstartscript %>
+ExecStart=/usr/bin/procServ --foreground --quiet --chdir=<%= @absbootdir -%> --ignore=^C^D^] --coresize=<%= @coresize -%> --restrict --logfile=<%= @procserv_log_file -%> --name <%= @name -%><% if @enable_console_port %> --port <%= @console_port -%><% end %><% if @enable_unix_domain_socket %> --port unix:/run/<%= @unix_domain_socket -%><% end %> <%= @absstartscript %>
 Restart=always
 User=<%= @username %>
+<% if @enable_unix_domain_socket -%>
+RuntimeDirectory=<%= File.dirname(@unix_domain_socket) %>
+<% end -%>
 
 [Install]
 WantedBy=multi-user.target
